--- a/news.html
+++ b/news.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
         <title>Cafe - NEWS</title>
-        <meta name="description" content="ブレンドコーヒーとヘルシーなオーガニックフードを提供するカフェ">
+        <meta name="description" content="こだわりのコーヒーを提供するカフェ">
         
        
         <!-- CSS -->
