--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
         <title>Cafe - CONTACT</title>
-        <meta name="description" content="ブレンドコーヒーとヘルシーなオーガニックフードを提供するカフェ">
+        <meta name="description" content="こだわりのコーヒーを提供するカフェ">
         
         <meta proper="og:url" content="https://example.com/index.html">
         <meta proper="og:type" content="website">
