--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <!-- CSS -->
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
         <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet">
+        <link rel=“stylesheet”　href=“style.css”>
         <link rel="icon" type="image/png" href="images/favicon.png">
     
     </head>
@@ -16,7 +16,7 @@
     <body>
         <div id="home" class="big-bg">
         <header class="page-header wrapper">
-            <h1><a href="index.html"><img class="logo" src="images/logo.png" alt="WCBカフェホーム"></a></h1>
+            <h1><a href="index.html"><img class="logo" src="logo.png" alt="WCBカフェホーム"></a></h1>
             <nav>
                 <ul class="main-nav">
                     <li><a href="news.html">News</a></li>
