--- a/menu.html
+++ b/menu.html
@@ -10,14 +10,14 @@
         <!-- CSS -->
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
         <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet">
-        <link rel="icon" type="image/png" href="images/favicon.png">
+        <link rel=“stylesheet”　href=“style.css”>
+        <link rel="icon" type="image/png" href="favicon.png">
     </head>
 
     <body>
         <div id="menu" class="big-bg">
         <header class="page-header wrapper">
-            <h1><a href="index.html"><img class="logo" src="images/logo.png" alt="WCBカフェホーム"></a></h1>
+            <h1><a href="index.html"><img class="logo" src="logo.png" alt="WCBカフェホーム"></a></h1>
             <nav>
                 <ul class="main-nav">
                     <li><a href="news.html">News</a></li>
@@ -37,39 +37,39 @@
 
     <div class="wrapper grid">
         <div class="item big-box">
-            <img src="images/https://github.com/iiickw/cafe/blob/main/menu1.jpg?raw=true" alt="">
+            <img src="menu1.jpg" alt="">
             <p>写真キャプション写真キャプション</p>
         </div>
         <div class="item">
-            <img src="images/menu2.jpg" alt="">
+            <img src="menu2.jpg" alt="">
             <p>写真キャプション写真キャプション</p>
         </div>
         <div class="item">
-            <img src="images/menu3.jpg" alt="">
+            <img src="menu3.jpg" alt="">
             <p>写真キャプション写真キャプション</p>
         </div>
         <div class="item">
-            <img src="images/menu4.jpg" alt="">
+            <img src="menu4.jpg" alt="">
             <p>写真キャプション写真キャプション</p>
         </div>
         <div class="item">
-            <img src="images/menu5.jpg" alt="">
+            <img src="menu5.jpg" alt="">
             <p>写真キャプション写真キャプション</p>
         </div>
         <div class="item">
-            <img src="images/menu6.jpg" alt="">
+            <img src="menu6.jpg" alt="">
             <p>写真キャプション写真キャプション</p>
         </div>
         <div class="item">
-            <img src="images/menu7.jpg" alt="">
+            <img src="menu7.jpg" alt="">
             <p>写真キャプション写真キャプション</p>
         </div>
         <div class="item">
-            <img src="images/menu8.jpg" alt="">
+            <img src="menu8.jpg" alt="">
             <p>写真キャプション写真キャプション</p>
         </div>
         <div class="item">
-            <img src="images/menu9.jpg" alt="">
+            <img src="menu9.jpg" alt="">
             <p>写真キャプション写真キャプション</p>
         </div>
 
