--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
         <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
         <link rel=“stylesheet”　href=“style.css”>
-        <link rel="icon" type="image/png" href="images/favicon.png">
+        <link rel="icon" type="png" href="favicon.png">
     
     </head>
 
