--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
         <!-- CSS -->
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
-        <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Philosopher">
         <link rel=“stylesheet”　href=“style.css”>
         <link rel="icon" type="png" href="favicon.png">
     
